Fix to jdk17