@@ -6,7 +6,7 @@
 
     <groupId>rubiks</groupId>
     <artifactId>rubiks</artifactId>
-    <version>4.0</version>
+    <version>1.3-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -32,15 +32,6 @@
                             <mainClass>gui.Gui</mainClass>
                         </manifest>
                     </archive>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
